src/test/ui/consts/miri_unleashed/const_refers_to_static_cross_crate.stderr
warning: skipping const checks
  --> $DIR/const_refers_to_static_cross_crate.rs:14:15
   |
LL |     unsafe { &static_cross_crate::ZERO }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refers_to_static_cross_crate.rs:11:1
   |
LL | / const SLICE_MUT: &[u8; 1] = {
LL | |
LL | |
LL | |     unsafe { &static_cross_crate::ZERO }
LL | |
LL | | };
   | |__^ type validation failed: encountered a reference pointing to a static variable
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:43:9
   |
LL |         SLICE_MUT => true,
   |         ^^^^^^^^^

warning: skipping const checks
  --> $DIR/const_refers_to_static_cross_crate.rs:21:15
   |
LL |     unsafe { &static_cross_crate::ZERO[0] }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refers_to_static_cross_crate.rs:18:1
   |
LL | / const U8_MUT: &u8 = {
LL | |
LL | |
LL | |     unsafe { &static_cross_crate::ZERO[0] }
LL | |
LL | | };
   | |__^ type validation failed: encountered a reference pointing to a static variable
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:51:9
   |
LL |         U8_MUT => true,
   |         ^^^^^^

warning: skipping const checks
  --> $DIR/const_refers_to_static_cross_crate.rs:28:17
   |
LL |     unsafe { &(*static_cross_crate::ZERO_REF)[0] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: any use of this value will cause an error
  --> $DIR/const_refers_to_static_cross_crate.rs:28:14
   |
LL | / const U8_MUT2: &u8 = {
LL | |     unsafe { &(*static_cross_crate::ZERO_REF)[0] }
   | |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constant accesses static
LL | |
LL | |
LL | |
LL | | };
   | |__-
   |
note: the lint level is defined here
  --> $DIR/const_refers_to_static_cross_crate.rs:26:8
   |
LL | #[warn(const_err)]
   |        ^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:61:9
   |
LL |         U8_MUT2 => true,
   |         ^^^^^^^

warning: skipping const checks
  --> $DIR/const_refers_to_static_cross_crate.rs:35:20
   |
LL |     unsafe { match static_cross_crate::OPT_ZERO { Some(ref u) => u, None => panic!() } }
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: any use of this value will cause an error
  --> $DIR/const_refers_to_static_cross_crate.rs:35:51
   |
LL | / const U8_MUT3: &u8 = {
LL | |     unsafe { match static_cross_crate::OPT_ZERO { Some(ref u) => u, None => panic!() } }
   | |                                                   ^^^^^^^^^^^ constant accesses static
LL | |
LL | |
LL | |
LL | | };
   | |__-
   |
note: the lint level is defined here
  --> $DIR/const_refers_to_static_cross_crate.rs:33:8
   |
LL | #[warn(const_err)]
   |        ^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:68:9
   |
LL |         U8_MUT3 => true,
   |         ^^^^^^^

error: aborting due to 6 previous errors; 6 warnings emitted

For more information about this error, try `rustc --explain E0080`.
